<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/photo"
        android:contentDescription="TODO" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="199dp"
        android:layout_marginStart="192dp"
        android:contentDescription="TODO"
        android:src="@drawable/mrsool_rect" />
    <View
        android:layout_width="5dp"
        android:layout_height="210dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="240dp"
        android:background="@color/b" />

    <TextView
        android:layout_width="310dp"
        android:layout_height="101dp"
        android:layout_marginStart="29sp"
        android:layout_marginTop="262dp"
        android:text="What is MRSOOL?"
        android:textColor="@color/b"
        android:textSize="32sp"
        android:textStyle="bold"

        />

    <TextView
        android:layout_width="330dp"
        android:layout_height="166dp"
        android:layout_marginStart="39sp"
        android:layout_marginTop="298dp"
        android:text="@string/mrsool_is_one_of_the_largest_delivery_platform_in_the_region"
        android:textColor="@color/b"
        android:textSize="32sp"
        android:textStyle="bold"

        />

    <TextView
        android:layout_width="330dp"
        android:layout_height="166dp"
        android:layout_marginStart="120sp"
        android:layout_marginTop="448dp"
        android:text="@string/what_we_offer"
        android:textColor="@color/b"
        android:textSize="32sp"
        android:textStyle="bold" />
    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="30dp"
        android:layout_height="238dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="-96dp"
        app:srcCompat="@drawable/copy"
        app:tint="@color/white"

        android:contentDescription="TODO" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="147dp"
        android:text="@string/contacts"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView

        android:layout_width="211dp"
        android:layout_height="210dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2254sp"
        android:layout_marginTop="498dp"
        android:layout_marginEnd="30dp"
        android:text="@string/place"
        android:textColor="@color/y"
        android:textSize="19sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="211dp"
        android:layout_height="210dp"
        android:layout_marginStart="229sp"
        android:layout_marginTop="566dp"
        android:text="@string/h"
        android:textColor="@color/y"
        android:textSize="19sp"
        android:textStyle="bold" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="59sp"
        android:layout_marginBottom="7dp"
        android:text="@string/mm"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="57dp"
        android:layout_height="238dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="-3dp"
        app:srcCompat="@android:drawable/ic_menu_mylocation"
        android:contentDescription="TOO" />
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentBottom="true"
    android:layout_marginStart="60dp"
    android:layout_marginBottom="93dp"
    android:text="@string/r"
    android:textColor="@color/white"
    android:textSize="26sp"
    android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="57dp"
        android:layout_height="238dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="-57dp"
        app:srcCompat="@android:drawable/sym_action_email"
        app:tint="@color/white"
        android:contentDescription="ttt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="50dp"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold" />
</RelativeLayout>